@@ -3,6 +3,7 @@ package nz.co.android.riverwatch.fragments;
 import nz.co.android.cowseye2.R;
 import nz.co.android.riverwatch.activity.MainScreenActivity;
 import android.app.Activity;
+import android.media.ExifInterface;
 import android.os.Bundle;
 import android.os.Environment;
 import android.support.v4.app.Fragment;
@@ -10,13 +11,15 @@ import android.text.format.DateFormat;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
+import android.widget.ScrollView;
 import android.widget.TableLayout;
 import android.widget.TableRow;
 import android.widget.TextView;
+import android.widget.Toast;
 
 import java.io.File;
+import java.io.IOException;
 import java.util.Calendar;
-import java.util.Date;
 import java.util.Locale;
 
 public class WaterReadingFragment extends Fragment{
@@ -41,7 +44,9 @@ public class WaterReadingFragment extends Fragment{
 	@Override
 	public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
 		super.onCreate(savedInstanceState);
+		ScrollView sv = new ScrollView(this.getActivity().getApplicationContext());
 		TableLayout tableLayout = new TableLayout(this.getActivity().getApplicationContext());
+		sv.addView(tableLayout);
 		TableRow tableRow;
 		TextView textView;
 		File dir = new File(Environment.getExternalStorageDirectory() + "/PhotoAR/");
@@ -52,15 +57,24 @@ public class WaterReadingFragment extends Fragment{
 			tableRow = new TableRow(this.getActivity().getApplicationContext());
 			textView = new TextView(this.getActivity().getApplicationContext());
 			Calendar cal = Calendar.getInstance(Locale.ENGLISH);
-			cal.setTimeInMillis(new Long(f.getName().replace(".jpg","")));
+			cal.setTimeInMillis(Long.valueOf(f.getName().replace(".jpg","")));
 			String date = DateFormat.format("dd-MM-yyyy hh:mm:ss", cal).toString();
-			textView.setText(date);
+			ExifInterface exif = null;
+			String message = "";
+			try {
+				exif = new ExifInterface(f.getCanonicalPath());
+				message = exif.getAttribute("UserComment");
+			} catch (IOException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+			textView.setText(date + " " + message);
 			textView.setPadding(20, 20, 20, 20);
 			tableRow.addView(textView);
 			tableLayout.addView(tableRow);
 		}
 //		setContentView(tableLayout);
-		View rootView = tableLayout;
+		View rootView = sv;
 //		View rootView = inflater.inflate(R.layout.coming_soon_layout, container, false);
 		return rootView;
 	}
